Fixed Alignment
Fixed library titles not being aligned below image.

--- a/modules/static/css/discovery.css
+++ b/modules/static/css/discovery.css
@@ -59,7 +59,7 @@
 
 .game-card-container {
 
-    
+	
 }
 
 
@@ -124,6 +124,7 @@
 
 .library-item {
     text-align: center;
+	justify-items:center;
     margin-bottom: 20px;
 }
 
@@ -141,7 +142,6 @@
     border-radius: 15px;
     padding: 5px 5px;
     margin-top: 8px;
-    max-width: calc(100% - 20px);
     box-sizing: border-box;
     white-space: normal;
     overflow-wrap: break-word; 
@@ -276,4 +276,22 @@
 
 .discovery-header {
 	text-align: center;
+}
+
+.discovery-panel {
+    display: flex;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    padding: 20px;
+    margin: 20px;
+    grid-template-columns: auto 1fr auto;
+    gap: 10px;
+    justify-content: space-between;
+    box-shadow: 0 9px 16px rgba(17, 2, 2, 2);
+    padding-bottom: 50px;
+
+
+
 }
